--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -7,3 +7,8 @@ $color-about-circle-bg: #eef9fa;
 
 $color-graph-text: #FB298E;
 $color-job-company-bg: #353F6A;
+
+$color-tategaki1: rgba(151, 34, 111, 0.54);
+$color-tategaki2: rgba(81, 68, 160, 0.54);
+$color-about-shindan: rgba(137, 116, 195, 0.27);
+$color-about-shindan-selected: rgba(137, 116, 195, 0.7);
